--- a/cases/00-000A/cz/page_5_front.html
+++ b/cases/00-000A/cz/page_5_front.html
@@ -1,12 +1,3 @@
-<h2>ODDÍL III: DOKUMENTACE PROJEKTŮ</h2>
-<p>Subjekt udržuje aktivní GitHub repozitář s dokumentovanými projekty. Pozorován vzor samostatného učení prostřednictvím absolvování online kurzů IBM.</p>
-<br>
-    <h3>Odkazy:</h3>
-<p><a href="https://github.com/V4YLO" target="_blank" rel="noopener noreferrer">GitHub — V4YLO</a></p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p><strong>DOKUMENTOVANÉ DŮKAZY:</strong><br>
-Všechny projekty prokazují postupně rostoucí technickou složitost a praktické uplatnění zásad bezpečnosti. Subjekt prokazuje iniciativu v převádění teoretických znalostí do funkčních implementací.</p>
+<div class="page-document">
+    <img class="dossier-photo" src="resources/7a4d5b27-1.png" alt="Jazyková práce 2">
+</div>
